# SimuFrame

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
SimuFrame/: __init__.py
SimuFrame/GUI/: __init__.py  controller.py  dialogs.py  main_window.py  plot_manager.py  results_tree_manager.py  state_manager.py  structure_creator.py  ui_populators.py  widgets.py
SimuFrame/GUI/interactive/: InteractiveCursor.py
SimuFrame/core/: __init__.py  assembly.py  formulation.py  model.py  solver.py  stability.py  visualization.py
SimuFrame/elements/: Template.yaml  beam.py  column_1.yaml  end_moment_beam.yaml  fig_beam.yaml  figueiras.yaml  frame.py  frame_1.yaml  frame_3.yaml  lee_frame.yaml  truss.py  truss_1.yaml  truss_2.yaml  truss_3.yaml  truss_5.yaml
SimuFrame/examples/: Template.yaml  __init__.py  column_1.yaml  create_dome.py  create_grid.py  dome.yaml  end_moment_beam.yaml  fig_beam.yaml  fig_grid.yaml  frame_1.yaml  frame_2.yaml  frame_3.yaml  lee_frame.yaml  truss_1.yaml  truss_2.yaml  truss_3.yaml  truss_4.yaml  truss_5.yaml  truss_6.yaml
SimuFrame/post_processing/: displacement_visualization.py  forces_visualization.py  support_visualization.py  visualization.py
SimuFrame/utils/: helpers.py  visualization_manager.py
SimuMembrane/core/: assembly.py
joss/: paper.bib  paper.md
