[project]
name = "simustruct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.1",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
    "qtawesome>=1.4.0",
    "ruamel-yaml>=0.18.17",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]
